# EvilGenie

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  test_config.yaml
config/: openhands_config.toml
src/: __init__.py  agent_runner.py  audit_multi_output.py  automated_tester.py  dataset_cache.py  env_utils.py  llm_reward_hacking_detector.py  multiple_solution_problems.txt  problem_setup.py  problems.py  reward_hacking_detector.py  reward_hacking_reporter.py  run_agent_tests.py  run_holdout_evaluation.py  test_config.yaml  workspace_manager.py
src/agent_runners/: __init__.py
src/agents/: __init__.py  claude_code.py  codex_cli.py  cursor_cli.py  gemini_cli.py  o3_deprecated.py  openai_function.py  openai_responses.py  openhands_cli.py  rate_limiter.py  smolagents.py
src/detection/: __init__.py
src/testing/: __init__.py  automated_tester.py
src/workspace/: __init__.py  workspace_manager.py
