[project]
name = "agent-testing"
version = "0.1.0"
description = "Automated testing framework for coding agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Agent Testing Contributors"}
]
license = {text = "MIT"}
keywords = ["coding", "agents", "testing", "automation", "competitive-programming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    # Core dependencies
    "datasets>=3.2.0",           # For accessing HuggingFace datasets
    "pyyaml>=6.0",              # For configuration files
    
    # AI/LLM clients
    "openai>=1.59.6",           # OpenAI API client
    "anthropic>=0.42.0",        # Anthropic/Claude API client  
    "google-genai>=0.6.0",      # Gemini API client
    "cohere>=5.13.6",           # Cohere API client
    
    # Claude Code SDK for agent runner
    "claude-code-sdk>=0.0.17",
    
    # AutoGen for multi-agent scenarios
    "pyautogen>=0.2.0",
    
    # Hugging Face transformers for local models (optional)
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

local-models = [
    "vllm>=0.5.0",             # For running local LLMs
    "together>=0.21.0",        # Together AI API
]

[project.urls]
Homepage = "https://github.com/livecodebench/agent-testing"
Repository = "https://github.com/livecodebench/agent-testing"
Documentation = "https://livecodebench.github.io/agent-testing"
Issues = "https://github.com/livecodebench/agent-testing/issues"

[project.scripts]
agent-test = "run_agent_tests:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]