[project]
name = "evilgenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.9.0",
    "claude-code-sdk>=0.0.20",
    "datasets<4.0",
    "openai>=1.99.9",
    "openhands-ai>=0.55.0",
    "smolagents>=1.21.2",
    "tree-sitter-languages>=1.10.2",
]
